--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-masker",
+	"name": "Masker",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Masker is an Obsidian plugin that enhances privacy by replacing specific text segments with obscured versions",
+	"author": "Alaksiej Karaloŭ",
+	"fundingUrl": "https://www.buymeacoffee.com/alaksiejk",
 	"isDesktopOnly": false
 }
