--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "masker-plugin",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
+	"description": "Masker is an Obsidian plugin that enhances privacy by replacing specific text segments with obscured versions, ensuring data confidentiality",
+	"main": "src/main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
@@ -12,12 +12,15 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^29.5.3",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"jest": "^29.6.2",
 		"obsidian": "latest",
+		"ts-jest": "^29.1.1",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
